fix enableSorting passthrough, use classnames for collapse icon, move bar scale to css variable

--- a/packages/react-components/src/filter-list/base/inputs/ListogramInput.module.css
+++ b/packages/react-components/src/filter-list/base/inputs/ListogramInput.module.css
@@ -74,6 +74,7 @@
   height: 100%;
   width: 100%;
   background: var(--bar-fill-color, var(--osdk-filter-listogram-bar-color));
+  transform: scaleX(var(--bar-scale, 0));
   transform-origin: left;
   transition: transform var(--osdk-filter-listogram-bar-fill-transition);
 }
